chore: refactor task manager to return stream of tasks